Styled the navbar
+Added icons to nav-links
+ Styled Team Nexus brand
+ Styled CTA Button

--- a/css/teamnexus.css
+++ b/css/teamnexus.css
@@ -1,1 +1,2 @@
-/* No CSS *//*# sourceMappingURL=teamnexus.css.map */
+html,body{font-family:"Open Sans", sans-serif;color:#212121}.bg-dark{background:#455a64 !important}.navbar-brand{border:1px #ffc107 solid;padding:1%;font-weight:700;font-size:1.5rem;text-transform:uppercase}.navbar-brand span{color:#ffc107}.nav-item{margin:0 10px}.nav-item .nav-link{font-size:1.25rem;text-transform:uppercase;font-weight:300}.nav-item .btn-outline-primary{border-color:#ffc107}.nav-item .btn-outline-primary:hover{background:#ffc107;color:#212121 !important}
+/*# sourceMappingURL=teamnexus.css.map */
