--- a/sass/teamnexus.scss
+++ b/sass/teamnexus.scss
@@ -19,9 +19,17 @@ $divider-color: #bdbdbd;
     border-color: $accent-color;
   }
 }
-a {
-  text-decoration: none !important;
+
+@mixin header() {
+  font-weight: 700;
+  text-transform: uppercase;
+  mark {
+    background: $accent-color;
+    color: $primary-text-color;
+    padding: 1%;
+  }
 }
+
 // Begin HTML Styling
 
 // Global CSS
@@ -29,16 +37,31 @@ html,
 body {
   font-family: "Open Sans", sans-serif;
   color: $primary-text-color;
+  position: relative;
+  overflow-x: hidden;
+  background: lighten($primary-color-light, 30%);
+  font-size: 16px;
 }
 @include button-main();
 
+a {
+  text-decoration: none !important;
+}
+
+hr {
+  height: 0.25rem;
+  background: $accent-color;
+  width: 30%;
+  border: 0px;
+  margin: 0;
+}
 // Navbar CSS
 .bg-dark {
   background: $primary-color-dark !important;
 }
 .navbar-brand {
   border: 1px $accent-color solid;
-  padding: 1%;
+  padding: 5px;
   font-weight: 700;
   font-size: 1.5rem;
   text-transform: uppercase;
@@ -87,8 +110,31 @@ body {
 
 // About CSS
 
+#about {
+  .row {
+    min-height: 35vh;
+  }
+  h1 {
+    @include header();
+  }
+  p {
+    padding: 1%;
+  }
+}
 // Features CSS
+#features {
+  background: $primary-color-dark;
+  .row {
+    min-height: 35vh;
+  }
 
+  h1 {
+    font-weight: 700;
+  }
+  p {
+    color: $primary-color-light;
+  }
+}
 // Call-to-Action CSS
 
 // Footer Css
