--- a/sass/teamnexus.scss
+++ b/sass/teamnexus.scss
@@ -66,6 +66,9 @@ body {
   background: lighten($primary-color-light, 30%);
   font-size: 16px;
 }
+::selection {
+  background: rgba($accent-color, 0.5);
+}
 @include button-main();
 @include button-main-2();
 
@@ -160,7 +163,7 @@ body::-webkit-scrollbar-thumb {
 
 #about {
   .row {
-    min-height: 450px;
+    min-height: 650px;
   }
   h1 {
     @include header();
@@ -173,7 +176,7 @@ body::-webkit-scrollbar-thumb {
 #features {
   background: $primary-color-dark;
   .row {
-    min-height: 450px;
+    min-height: 650px;
   }
   .fa-border {
     border: 1px solid $accent-color;
@@ -209,7 +212,7 @@ body::-webkit-scrollbar-thumb {
   background-position: center;
   background-attachment: fixed;
   .row {
-    min-height: 250px;
+    min-height: 450px;
   }
   h1 {
     color: white;
@@ -218,10 +221,41 @@ body::-webkit-scrollbar-thumb {
 // Staff CSS
 #staff {
   .row {
-    min-height: 450px;
+    min-height: 650px;
   }
   h1 {
     @include header();
   }
+  p.lead {
+    font-weight: 400;
+    margin: 0;
+  }
+  p.muted {
+    color: $secondary-text-color;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin: 0;
+  }
+  img {
+    border: 5px solid transparent;
+    transition: border 0.5s, filter 0.5s;
+    transition-timing-function: ease-in-out;
+    filter: grayscale(0%);
+  }
+  img:hover {
+    border: 5px solid $accent-color;
+    filter: grayscale(50%);
+  }
 }
 // Footer Css
+#footer {
+  background: $primary-color-dark;
+  .row {
+    min-height: 50px;
+  }
+  p {
+    color: $primary-color-light;
+    text-align: center;
+    font-weight: 400;
+  }
+}
