--- a/sass/teamnexus.scss
+++ b/sass/teamnexus.scss
@@ -180,16 +180,17 @@ body::-webkit-scrollbar-thumb {
   }
   .fa-border {
     border: 1px solid $accent-color;
-    color: white;
+    color: $primary-text-color;
     transition: background 0.25s, color 0.25s, margin 0.25s;
     transition-timing-function: ease-in-out;
     margin-top: 5%;
     margin: 3% 0;
     border-radius: 0px;
+    background: $accent-color;
   }
   .fa-border:hover {
-    background: $accent-color;
-    color: $primary-text-color;
+    background: transparent;
+    color: $primary-color-light;
     margin: 5%;
   }
 
