--- a/sass/teamnexus.scss
+++ b/sass/teamnexus.scss
@@ -54,6 +54,15 @@ $divider-color: #bdbdbd;
   }
 }
 
+@mixin secondary-btn {
+  .btn-outline-secondary {
+    border-color: $secondary-text-color;
+    color: $secondary-text-color;
+  }
+  .btn-outline-secondary:hover {
+    background: $secondary-text-color;
+  }
+}
 #navbar {
   button {
     border-radius: 0px;
@@ -80,7 +89,7 @@ body {
 }
 @include button-main();
 @include button-main-2();
-
+@include secondary-btn();
 a {
   text-decoration: none !important;
 }
@@ -232,6 +241,7 @@ body::-webkit-scrollbar-thumb {
 }
 // Staff CSS
 #staff {
+  margin: 7% 0;
   .row {
     min-height: 650px;
   }
